--- a/css/main.css
+++ b/css/main.css
@@ -60,11 +60,11 @@ img {
 .container {
   width: 100%;
   padding: 0 15px;
-  margin: 0 auto;
 }
 
 @media screen and (min-width: 480px) {
   .container {
+    margin: 0 auto;
     max-width: 480px;
   }
 }
@@ -344,7 +344,7 @@ img {
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero/hero-1x.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 480px 400px;
@@ -352,38 +352,41 @@ img {
 
 .title-hero {
   font-family: var(--main-font);
-  font-weight: 900;
   font-size: 26px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+  font-weight: 900;
+  margin-bottom: 30px;
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), screen and (min-resolution: 192dpi) and (min-width: 320px), screen and (min-resolution: 2dppx) and (min-width: 320px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero-2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero-mobile@2x.jpg");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero_tablet-1x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero/hero-tablet.jpg);
     background-size: 768px 400px;
   }
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero_tablet-2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero/hero-tablet@2px.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero_desk-1x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero/hero-desktop.jpg);
     background-size: 1600px 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
   .title-hero {
     font-weight: 900;
@@ -394,41 +397,10 @@ img {
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero_desk-2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero/hero-desktop@2x.jpg);
   }
 }
 
-/*.hero {
-  background-color: #2f303a;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../images/hero/hero.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  & .title-hero {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    width: 696px;
-  }
-}
-.hero .container {
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-
-.title-hero {
-  font-family: var(--main-font);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.363;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #ffffff;
-}*/
 .benefits {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1064,8 +1036,15 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
+  .footer-form {
+    display: flex;
+    margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .button-subscribe {
-    margin-left: 12px;
+    margin-right: 12px;
   }
 }
 
@@ -1350,7 +1329,7 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .buttons-list {
+  .button-list {
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
@@ -1362,7 +1341,7 @@ img {
     padding-top: 94px;
     padding-bottom: 94px;
   }
-  .buttons-list {
+  .button-list {
     margin-bottom: 50px;
   }
 }
