--- a/sass/layout/_portfolio-btn.scss
+++ b/sass/layout/_portfolio-btn.scss
@@ -45,7 +45,7 @@
   }
 }
 @media screen and (min-width: 768px) {
-  .buttons-list {
+  .button-list {
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
@@ -56,7 +56,7 @@
     padding-top: 94px;
     padding-bottom: 94px;
   }
-  .buttons-list {
+  .button-list {
     margin-bottom: 50px;
   }
 }
