--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,7 +5,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/images/hero/hero-mobile.jpg");
+    url(../images/hero/hero-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 480px 400px;
@@ -30,7 +30,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/hero/hero-mobile@2x.jpg");
+      url(../images/hero/hero-mobile@2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
@@ -39,7 +39,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(/images/hero/hero-tablet.jpg);
+      url(../images/hero/hero-tablet.jpg);
     background-size: 768px 400px;
   }
 }
@@ -51,7 +51,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(/images/hero/hero-tablet@2px.jpg);
+      url(../images/hero/hero-tablet@2px.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -60,7 +60,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(/images/hero/hero-desktop.jpg);
+      url(../images/hero/hero-desktop.jpg);
     background-size: 1600px 600px;
     padding-top: 200px;
     padding-bottom: 200px;
@@ -80,6 +80,6 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(/images/hero/hero-desktop@2x.jpg);
+      url(../images/hero/hero-desktop@2x.jpg);
   }
 }
