--- a/sass/layout/_backdrop.scss
+++ b/sass/layout/_backdrop.scss
@@ -1,51 +1,49 @@
 .backdrop {
+  background-color: rgba(0, 0, 0, 0.1);
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &.is-hidden {
-    transition: all 250ms linear 2500ms;
-  }
-}
 
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  z-index: 100;
+}
 .modal {
+  width: 450px;
+  min-height: 609px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background-color: #fff;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
-  min-height: 581px;
-  background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
   padding: 40px;
-
-  .backdrop.is-hidden & {
-    transform: translate(-50%, -50%) scale(0);
-    transition: transform 250ms linear 0ms;
-  }
+  position: relative;
+  z-index: 100;
 }
-
 .close-btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+
   display: flex;
   align-items: center;
+  justify-content: center;
+
   position: absolute;
   top: 8px;
   right: 8px;
-  width: 30px;
-  height: 30px;
-  background-color: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  cursor: pointer;
-  &:hover,
-  &:focus {
+
+  &:focus,
+  &:hover {
     fill: #2196f3;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
@@ -54,7 +52,6 @@
   visibility: hidden;
   pointer-events: none;
 }
-
 .backdrop-slogan {
   font-family: var(--main-font);
   font-weight: bold;
@@ -63,14 +60,9 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+
   margin-bottom: 12px;
 }
-
-.backdrop-form {
-  display: flex;
-  flex-direction: column;
-}
-
 .backdrop-form-field {
   font-family: var(--main-font);
   font-size: 12px;
@@ -79,6 +71,10 @@
   color: #757575;
 }
 
+.backdrop-form {
+  display: flex;
+  flex-direction: column;
+}
 .backdrop-form-input {
   width: 100%;
   height: 40px;
@@ -86,93 +82,93 @@
   box-sizing: border-box;
   border-radius: 4px;
   padding-left: 42px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:focus {
-    outline: none;
-    border-color: #2196f3;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop-form-icon {
+  position: absolute;
+  fill: #000000;
+
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .backdrop-form-field:focus-within &,
+  &:hover {
+    fill: #2196f3;
   }
 }
-
 .backdrop-form-input-wrapper {
-  position: relative;
   display: block;
+  position: relative;
+
   margin-top: 4px;
   margin-bottom: 10px;
 }
 
-.backdrop-form-icon {
-  position: absolute;
-  fill: #000000;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .backdrop-form-input:focus + & {
-    fill: #2196f3;
-  }
+.backdrop-form-input:focus,
+.backdrop-form-comment:focus {
+  outline: none;
+  border-color: #2196f3;
 }
-
 .backdrop-form-comment {
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
   border-radius: 4px;
+
   margin-top: 4px;
   margin-bottom: 20px;
   padding: 12px 16px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   resize: none;
-  &:focus {
-    outline: none;
-    border-color: #2196f3;
-  }
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   &::placeholder {
     font-family: var(--main-font);
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
+    color: rgba (117, 117, 117, 0.5);
   }
 }
+.backdrop-form-policy-text::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
 
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  margin-right: 7px;
+}
+.backdrop-form-checkbox:checked + .backdrop-form-policy-text::before {
+  background-image: url(../images/modal/vector.svg);
+  background-color: #188ce8;
+  background-repeat: no-repeat;
+  border: none;
+  background-position: 50% 50%;
+}
+.backdrop-form-checkbox:checked + .backdrop-form-policy-text::before {
+  border-color: #188ce8;
+}
 .backdrop-form-policy-text {
-  font-family: var(--accent-color);
+  font-family: #212121;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
   margin-bottom: 30px;
-
-  &::before {
-    content: "";
-    display: inline-block;
-    width: 16px;
-    height: 15px;
-    border: 2px solid #212121;
-    margin-right: 10px;
-    border-radius: 2px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    .backdrop-form-checkbox:checked + & {
-      background-image: url(../images/modal/vector.svg);
-      background-color: #2196f3;
-      background-repeat: no-repeat;
-      background-size: contain;
-      border: none;
-      background-position: 50% 50%;
-    }
-  }
 }
 .backdrop-text-link {
   color: #2196f3;
   text-decoration-line: underline;
 }
-
 .backdrop-form-btn {
   font-family: var(--main-font);
   font-size: 16px;
@@ -182,17 +178,20 @@
   letter-spacing: 0.06em;
   color: #ffffff;
   font-weight: bold;
+
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   background: #188ce8;
   cursor: pointer;
+
   width: 200px;
   min-height: 50px;
   margin: auto;
-
-  &:hover,
-  &:focus {
-    background-color: #188ce8;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
   }
 }
