--- a/css/main.css
+++ b/css/main.css
@@ -608,6 +608,14 @@ img {
   justify-content: space-between;
 
 }*/
+@media screen and (min-width: 1200px) {
+  .subtitle {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
+}
+
 .workers {
   background-color: #f5f4fa;
   padding-top: 60px;
@@ -806,6 +814,13 @@ img {
 .costumers-list-item {
   width: calc((100% - 2 * 30px) / 2);
   margin: 15px;
+}
+
+@media screen and (min-width: 1200px) {
+  .customers {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 @media screen and (min-width: 768px) {
