--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -50,14 +50,7 @@
   margin-bottom: 20px;
   display: inline-block;
 }
-.footer-social-list {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-  &-item:not(:last-child) {
-    margin-right: 10px;
-  }
-}
+
 .footer-social-link {
   display: flex;
   justify-content: center;
@@ -77,18 +70,21 @@
 .footer-social-icon {
   fill: #ffffff;
 }
-
 .footer-form-input {
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: #2f303a;
-  padding: 15px 16px;
-  margin-right: 12px;
-  color: rgba(255, 255, 255, 0.6);
+  .form-subscribe & {
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: #2f303a;
+    padding: 15px 16px;
+    color: rgba(255, 255, 255, 0.6);
+  }
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
 
 .form-subscribe {
@@ -96,7 +92,13 @@
   height: 50px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    width: 358px;
+  }
 }
+
 .button-subscribe {
   min-width: 200px;
   height: 50px;
@@ -120,7 +122,11 @@
 .subscribe-text {
   margin-right: 10px;
 }
-
+.footer .container {
+  @media screen and (min-width: 1200px) {
+    @include centeredFlex(baseline);
+  }
+}
 @media screen and (min-width: 1200px) {
   .logo-footer {
     font-weight: 700;
@@ -146,34 +152,36 @@
     align-items: baseline;
   }
 }
-@media screen and (max-width: 1199px) {
-  .footer-address-container {
+.footer-address-container {
+  @media screen and (max-width: 1199px) {
     margin-bottom: 60px;
   }
-}
-@media screen and (max-width: 1199px) and (min-width: 768px) {
-  .footer-address-container {
+  @media screen and (max-width: 1199px) and (min-width: 768px) {
     display: inline-block;
   }
 }
-@media screen and (min-width: 1200px) {
-  .footer-contact {
+.footer-contact {
+  @media screen and (min-width: 1200px) {
     width: 231px;
   }
 }
-@media screen and (max-width: 1199px) {
-  .footer-container-slogan {
+.footer-container-slogan {
+  @media screen and (max-width: 1199px) {
     margin-bottom: 60px;
   }
-}
-@media screen and (max-width: 1199px) and (min-width: 768px) {
-  .footer-container-slogan {
+  @media screen and (max-width: 1199px) and (min-width: 768px) {
     display: inline-block;
   }
-}
-@media screen and (min-width: 1200px) {
-  .footer-container-slogan {
+  @media screen and (min-width: 1200px) {
     margin-left: 70px;
+  }
+}
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  &-item:not(:last-child) {
+    margin-right: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -181,28 +189,22 @@
     justify-content: space-between;
   }
 }
-@media screen and (min-width: 1200px) {
-  .form-subscribe {
-    display: flex;
-    width: 358px;
-  }
-}
+
 @media screen and (min-width: 1200px) {
   .footer-form {
     display: flex;
     margin-top: 20px;
   }
 }
-@media screen and (min-width: 1200px) {
-  .button-subscribe {
+.button-subscribe {
+  @media screen and (min-width: 1200px) {
     margin-right: 12px;
   }
-}
-@media screen and (max-width: 1199px) {
-  .button-subscribe {
+  @media screen and (max-width: 1199px) {
     margin-top: 20px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   .footer-group {
     margin-left: 94px;
