--- a/css/main.css
+++ b/css/main.css
@@ -893,16 +893,6 @@ img {
   display: inline-block;
 }
 
-.footer-social-list {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.footer-social-list-item:not(:last-child) {
-  margin-right: 10px;
-}
-
 .footer-social-link {
   display: flex;
   justify-content: center;
@@ -923,24 +913,35 @@ img {
   fill: #ffffff;
 }
 
-.footer-form-input {
-  width: 358px;
-  height: 50px;
+.form-subscribe .footer-form-input {
+  width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2f303a;
+  color: rgba(255, 255, 255, 0.6);
   padding: 15px 16px;
-  margin-right: 12px;
+}
+
+.footer-form-input::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.form-subscribe {
-  max-width: 450px;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
+@media screen and (min-width: 1200px) {
+  .form-subscribe {
+    max-width: 450px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-subscribe {
+    display: flex;
+    width: 358px;
+  }
 }
 
 .button-subscribe {
@@ -1033,16 +1034,19 @@ img {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .footer-social-list {
-    justify-content: space-between;
-  }
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.footer-social-list-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 @media screen and (min-width: 1200px) {
-  .form-subscribe {
-    display: flex;
-    width: 358px;
+  .footer-social-list {
+    justify-content: space-between;
   }
 }
 
@@ -1071,31 +1075,6 @@ img {
   }
 }
 
-/*
-.footer > .container {
-  display: flex;
-  align-items: baseline;
-}
-.footer-address-container {
-  margin-right: 83px;
-}
-
-.logo-footer {
-  font-family: var(--secondary-font);
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.192;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  display: block;
-  margin-bottom: 20px;
-}
-
-
-
-
-
-*/
 .backdrop {
   background-color: rgba(0, 0, 0, 0.1);
   position: fixed;
