--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -33,7 +33,8 @@
 
   color: #757575;
 }
-@media screen and (max-width: 1199px) and (min-width: 768px) {
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .work-examples-title {
     letter-spacing: 0.04em;
   }
@@ -49,7 +50,7 @@
     margin: -15px;
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 300px) and (max-width: 1199px) {
   .work-examples-item:not(:last-child) {
     margin-bottom: 30px;
   }
