--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,7 +11,7 @@
     letter-spacing: 0.03em;
     color: #ffffff;
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
 }
 
@@ -26,7 +26,8 @@
   margin-bottom: 20px;
 }
 .footer-contact-mail {
-  margin-bottom: 10px;
+  display: block;
+  margin-bottom: 8px;
 }
 .footer-contact-mail,
 .footer-contact-tel {
@@ -72,31 +73,41 @@
   fill: #ffffff;
 }
 
-.footer-form-input {
-  .form-subscribe & {
-    width: 100%;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-sizing: border-box;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    background-color: #2f303a;
-    color: rgba(255, 255, 255, 0.6);
-    padding: 15px 16px;
+@media screen and (min-width: 1200px) {
+  .button-subscribe {
+    margin-left: 12px;
   }
-  &::placeholder {
-    color: rgba(255, 255, 255, 0.6);
-  }
-}
-.form-subscribe {
-  max-width: 450px;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
 }
 @media screen and (min-width: 1200px) {
   .form-subscribe {
     display: flex;
     width: 358px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-flex-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+}
+.footer-address-container {
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
+  @media screen and (max-width: 1199px) and (min-width: 768px) {
+    display: inline-block;
+  }
+}
+.footer-container-slogan {
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
+  @media screen and (max-width: 1199px) and (min-width: 768px) {
+    display: inline-block;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
   }
 }
 
@@ -118,16 +129,11 @@
   font-family: var(--main-font);
   padding: 10px 29px;
   display: inline-flex;
-  margin-left: -5px;
 }
 .subscribe-text {
   margin-right: 10px;
 }
-@media screen and (min-width: 1200px) {
-  .button-subscribe {
-    margin-left: 12px;
-  }
-}
+
 @media screen and (min-width: 1200px) {
   .logo-footer {
     font-weight: 700;
@@ -146,19 +152,20 @@
     align-items: baseline;
   }
 }
-@media screen and (min-width: 768px) {
-  .footer-flex-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: baseline;
+
+.footer-form-input {
+  .form-subscribe & {
+    width: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: #2f303a;
+    color: rgba(255, 255, 255, 0.6);
+    padding: 15px 16px;
   }
-}
-.footer-address-container {
-  @media screen and (max-width: 1199px) {
-    margin-bottom: 60px;
-  }
-  @media screen and (max-width: 1199px) and (min-width: 768px) {
-    display: inline-block;
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.6);
   }
 }
 .footer-contact {
@@ -166,17 +173,7 @@
     width: 231px;
   }
 }
-.footer-container-slogan {
-  @media screen and (max-width: 1199px) {
-    margin-bottom: 60px;
-  }
-  @media screen and (max-width: 1199px) and (min-width: 768px) {
-    display: inline-block;
-  }
-  @media screen and (min-width: 1200px) {
-    margin-left: 70px;
-  }
-}
+
 .footer-social-list {
   display: flex;
   justify-content: center;
