--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -111,27 +111,24 @@
   }
 }
 
-.button-subscribe {
-  min-width: 200px;
+.step-btn {
+  max-width: 200px;
+  width: 100%;
   height: 50px;
-  background-color: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  cursor: pointer;
-  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
   align-items: center;
   text-align: center;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.87;
   letter-spacing: 0.06em;
   color: #ffffff;
+  background-color: #2196f3;
   font-family: var(--main-font);
-  padding: 10px 29px;
-  display: inline-flex;
-}
-.subscribe-text {
-  margin-right: 10px;
+  cursor: pointer;
+  border: transparent;
+  transition: filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 1200px) {
@@ -194,13 +191,19 @@
     margin-top: 20px;
   }
 }
+.button-subscribe {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 
-@media screen and (max-width: 1199px) {
-  .button-subscribe {
+  @media screen and (max-width: 1199px) {
+    margin-left: 12px;
+  }
+  @media screen and (max-width: 1199px) {
     margin-top: 20px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .footer-group {
     margin-left: 94px;
