--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,6 +1,7 @@
 body {
   font-family: var(--main-font);
   color: var(--accent-color);
+  margin: 0;
 }
 .list {
   list-style: none;
@@ -30,6 +31,8 @@ p {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .address {
