--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -2,18 +2,16 @@
   display: flex;
   flex-wrap: wrap;
 }
-.work-examples-item {
-  max-width: 450px;
-  background: #ffffff;
-}
+
 .portfolio-photo-link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .work-examples-content {
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
-  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  padding: 20px 21px;
 }
 .work-examples-title {
   font-family: var(--main-font);
@@ -50,6 +48,13 @@
     margin: -15px;
   }
 }
+
+@media screen and (max-width: 1199px) {
+  .work-examples-item {
+    max-width: 450px;
+    background: #ffffff;
+  }
+}
 @media screen and (min-width: 300px) and (max-width: 1199px) {
   .work-examples-item:not(:last-child) {
     margin-bottom: 30px;
@@ -66,6 +71,7 @@
     max-width: 370px;
   }
 }
+
 /*.section-portfolio > .container {
   padding-top: 94px;
 }
