--- a/css/main.css
+++ b/css/main.css
@@ -950,19 +950,6 @@ img {
   fill: #ffffff;
 }
 
-@media screen and (min-width: 1200px) {
-  .button-subscribe {
-    margin-left: 12px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .form-subscribe {
-    display: flex;
-    width: 358px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .footer-flex-container {
     display: flex;
@@ -1001,7 +988,7 @@ img {
   }
 }
 
-.step-btn {
+.button-subscribe {
   max-width: 200px;
   width: 100%;
   height: 50px;
@@ -1080,9 +1067,29 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
+  .footer-group {
+    margin-left: 93px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .footer-form {
     display: flex;
     margin-top: 20px;
+  }
+}
+
+.form-subscribe {
+  max-width: 450px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 1200px) {
+  .form-subscribe {
+    display: flex;
+    width: 358px;
   }
 }
 
@@ -1095,19 +1102,13 @@ img {
 
 @media screen and (max-width: 1199px) {
   .button-subscribe {
-    margin-left: 12px;
-  }
-}
-
-@media screen and (max-width: 1199px) {
-  .button-subscribe {
     margin-top: 20px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .footer-group {
-    margin-left: 94px;
+  .button-subscribe {
+    margin-left: 12px;
   }
 }
 
