--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -73,17 +73,6 @@
   fill: #ffffff;
 }
 
-@media screen and (min-width: 1200px) {
-  .button-subscribe {
-    margin-left: 12px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .form-subscribe {
-    display: flex;
-    width: 358px;
-  }
-}
 @media screen and (min-width: 768px) {
   .footer-flex-container {
     display: flex;
@@ -111,7 +100,7 @@
   }
 }
 
-.step-btn {
+.button-subscribe {
   max-width: 200px;
   width: 100%;
   height: 50px;
@@ -184,11 +173,27 @@
     justify-content: space-between;
   }
 }
-
+.footer-group {
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .footer-form {
     display: flex;
     margin-top: 20px;
+  }
+}
+
+.form-subscribe {
+  max-width: 450px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    width: 358px;
   }
 }
 .button-subscribe {
@@ -196,16 +201,10 @@
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-
-  @media screen and (max-width: 1199px) {
-    margin-left: 12px;
-  }
   @media screen and (max-width: 1199px) {
     margin-top: 20px;
   }
-}
-@media screen and (min-width: 1200px) {
-  .footer-group {
-    margin-left: 94px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 12px;
   }
 }
