--- a/sass/layout/_workers.scss
+++ b/sass/layout/_workers.scss
@@ -10,6 +10,34 @@
   padding-top: 60px;
   padding-bottom: 60px;
 }
+
+.workers-list {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+.workers-list-item {
+  background-color: #ffffff;
+  padding-bottom: 24px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 4 * 30px) / 4);
+    padding-bottom: 30px;
+  }
+}
 .workers-name {
   font-family: var(--main-font);
   font-weight: 500;
@@ -17,7 +45,7 @@
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 10px;
+  margin-top: 30px;
 }
 .workers-position {
   font-family: var(--main-font);
@@ -27,8 +55,9 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
-  margin-bottom: 16px;
+  margin-top: 10px;
 }
+/*
 .workers-content {
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -36,127 +65,4 @@
   padding-top: 30px;
   padding-bottom: 24px;
   background-color: #ffffff;
-}
-.workers-list-item {
-  width: 450px;
-}
-@media screen and (min-width: 768px) {
-  .workers-list-item {
-    width: 354px;
-  }
-
-  .workers-list {
-    display: flex;
-    flex-wrap: wrap;
-  }
-}
-@media screen and (min-width: 300px) and (max-width: 767px) {
-  .workers-list-item:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .workers-list-item:nth-child(2n + 1) {
-    margin-right: 30px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .workers {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
-
-  .workers-list {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .workers-list-item {
-    width: 270px;
-    margin-bottom: 0;
-  }
-}
-/*
-@media screen and (max-width: 767px) {
-  .workers-list-item:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .workers-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -15px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .workers-list-item {
-    width: calc((100% - 2 * 30px) / 2);
-    margin: 15px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .workers-list-item {
-    width: calc((100% - 4 * 30px) / 4);
-    padding-bottom: 30px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .workers {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
 }*/
-/*.workers > .container {
-  padding-top: 94px;
-}
-.workers {
-  background-color: #f5f4fa;
-  &-list {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-.workers-list-item {
-  margin-bottom: 94px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  background-color: #ffffff;
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
-  overflow: hidden;
-}
-
-.workers-content {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 30px;
-  padding-right: 30px;
-}
-.workers-name {
-  font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.187;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-  margin-bottom: 10px;
-}
-.workers-position {
-  font-family: var(--main-font);
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.187;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #757575;
-  margin-bottom: 16px;
-}
-*/
