--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -188,8 +188,9 @@
   height: 50px;
   margin-left: auto;
   margin-right: auto;
-
-  @media screen and (min-width: 1200px) {
+}
+@media screen and (min-width: 1200px) {
+  .form-subscribe {
     display: flex;
     width: 358px;
   }
